# morph

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
3rdParties/sdl_ttf/include/SDL3_ttf/: SDL_ttf.h
3rdParties/yoga/include/java/: AndroidManifest.xml  CMakeLists.txt  build.gradle.kts  proguard-rules.pro  yogajni.version
3rdParties/yoga/include/java/res/values/: strings.xml
3rdParties/yoga/include/java/tests/com/facebook/yoga/: TestParametrization.java  YGAlignBaselineTest.java  YogaExceptionTest.java  YogaLoggerTest.java  YogaNodeStylePropertiesTest.java  YogaNodeTest.java  YogaValueTest.java
3rdParties/yoga/include/java/tests/com/facebook/yoga/utils/: TestUtils.java
3rdParties/yoga/include/yoga/: YGNodeLayout.cpp  YGNodeLayout.h
3rdParties/yoga/include/yoga/algorithm/: CalculateLayout.cpp  PixelGrid.cpp
3rdParties/yoga/include/yoga/debug/: AssertFatal.cpp
3rdParties/yoga/include/yoga/event/: event.h
3rdParties/yoga/include/yoga/node/: LayoutResults.h  Node.cpp
add-ins/: ViewModel.h  journal.js  morph.js
add-ons/: journal.js  morph-api.js  morph.js
aspectable/: Aspectable.h
bridge/: JSEngine.h  JSType.h  bridge_cast.h  bridge_cast_v2.h
bridge/v8/: V8Bridge.h  V8Engine.cpp  V8Engine.h  V8Type.cpp  V8Type.h
eventable/: Event.h  EventArgs.h  Eventable.h
journal/: FileJournalist.cpp  FileJournalist.h  IJournalist.h  Journal.h  Journal.json  Journalists.h  Severity.h
jsEngine/: JSConverter.h  JSEngine.h  JSType.h  V8Binding.h  V8Converter.h  V8Engine.cpp  V8Engine.h  V8Type.cpp  V8Type.h
layout/: IProperty.h
morph/: ButtonView.cpp  ButtonView.h  DivView.cpp  DivView.h  ILayout.h  MorphButtonNode.h  MorphDivNode.h  MorphNode.cpp  MorphNode.h  MorphNodeStyle.cpp  MorphNodeStyle.h  MorphTimer.h  MorphWindowNode.h  NodeStyle.cpp  NodeStyle.h  TextView.cpp  TextView.h  TreeNode.h  View.cpp  View.h  WindowMgr.cpp  WindowMgr.h  WindowView.cpp  WindowView.h  YGLayout.cpp  YGLayout.h  YGLayoutChangedEventArgs.h
morph/mvvm/: ViewModel.h
morphling/: .babelrc  README.md  app.js  hostEnvironment.js  index.js  morphling.js  package-lock.json  package.json  webpack.config.js
morphling/mocks/: ButtonView.js  DivView.js  ImageView.js  Journal.js  ListView.js  MorphTimer.js  ScrollView.js  TextView.js  View.js  WindowView.js  index.js
needle/: FixedString.h  Needle.h  Sewable.h
playable/: PlayableAspect.h
reacts/: package-lock.json
reacts-umd/: package-lock.json  package.json  rollup.config.js
reacts-umd/src/: index.js
reacts/src/: index.js
